# stress_testing

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  example_task.md  temp_test.java
.cache/clangd/index/: c-compiler.cpp.78BE15CBA92300E5.idx  compiler-factory.cpp.EC7C3F94FB5EA863.idx  compiler-factory.hpp.4715A85F61DC407D.idx  cpp-compiler.cpp.7A40450C07F3EABB.idx  extension-map.cpp.0FF7C032CBF66990.idx  go-compiler.cpp.0638E2CC860409D4.idx  java-compiler.cpp.7B571607F4AB1221.idx  langs.hpp.C37424FB2D7C8BB4.idx  language-compilers.hpp.FD4F3589F2B5AAB0.idx  language-detector.cpp.34A17C212F60FD5C.idx  parser.cpp.A93F0C5CE5B52D6C.idx  parser.hpp.050A8F1D990F8D0F.idx  py-compiler.cpp.F92F3EE8D529513F.idx  stress-test-runner.cpp.ED45891884BFEAE0.idx  test-compiler-factory.cpp.69A2375531DCA039.idx  test-language-mapper.cpp.9F49D2149D04996D.idx  test-parser.cpp.10E4D613F15950C2.idx
.github/workflows/: ci.yml
src/: Generator.cpp  NaiveSolution.cpp  SmartSolution.cpp  StandartChecker.cpp  StressTestRunner.cpp  compiler.hpp  langs.hpp  stress-test-runner.cpp
src/c-runner/: advanced-checker.c
src/compiler-builder/: c-compiler.cpp  cpp-compiler.cpp  go-compiler.cpp  java-compiler.cpp  language-compilers.hpp  py-compiler.cpp
src/cpp-runner/: advanced-checker.cpp  naive-solution.cpp
src/cxx-builder/: advanced-checker.cpp  generator.cpp  naive-solution.cpp  smart-solution.cpp
src/detector/: compiler-factory.cpp  compiler-factory.hpp  extension-map.cpp  language-detector.cpp
src/go-runner/: smart-solution.go
src/lib/: cmd-builder.cpp  cmd-builder.hpp  parser.cpp  parser.hpp
src/py-builder/: advanced-checker.py  generator.py  naive-solution.py  smart-solution.py
src/py-runner/: advanced-checker.py
src/runners/c-runner/: generator.c  naive-solution.c  smart-solution.c
src/runners/cpp-runner/: generator.cpp
src/runners/go-runner/: advanced-checker.go  generator.go  naive-solution.go
src/runners/java-runner/: advanced-checker.java  generator.java  naive-solution.java  smart-solution.java
src/utils/: compiler-factory.cpp  compiler-factory.hpp  parser.cpp  parser.hpp  standart-checker.cpp
tests/: in.txt  naiveOut.txt  smartOut.txt
unittests/: test-compiler-factory.cpp  test-language-mapper.cpp  test-parser.cpp
